syntax = "proto3";

package calculator;

option java_package = "org.example.calculator";
option java_multiple_files = true;

message SumRequest {
  repeated int32 numbers = 1;
}

message PrimeNumberDecompositionRequest {
  int64 number = 1;
}

message PrimeNumberDecompositionResponse {
  int64 prime_factor = 1;
}

message SumResponse {
  int32 result = 1;
}

service CalculatorService {
  rpc Sum(SumRequest) returns (SumResponse);
  rpc GetPrimeFactors(PrimeNumberDecompositionRequest) returns (stream PrimeNumberDecompositionResponse);
}