syntax = "proto3";

package calculator;

option java_package = "org.example.calculator";
option java_multiple_files = true;

message SumRequest {
  repeated int32 numbers = 1;
}

message SumResponse {
  int32 result = 1;
}

message PrimeNumberDecompositionRequest {
  int64 number = 1;
}

message PrimeNumberDecompositionResponse {
  int64 primeFactor = 1;
}

message ComputeAverageRequest {
  int32 number = 1;
}

message ComputeAverageResponse {
  double average = 1;
}

message FindMaximumRequest {
  int32 number = 1;
}

message FindMaximumResponse {
  int32 maximum = 1;
}

message SquareRootRequest {
  int32 number = 1;
}

message SquareRootResponse {
  double numberRoot = 1;
}
